Make building info columns

--- a/codes/4_multi_task_learning.ipynb
+++ b/codes/4_multi_task_learning.ipynb
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9b93ce0",
+   "id": "aef52c38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e02856a7",
+   "id": "f002b546",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5328ca29",
+   "id": "42502fef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bbc5ca79",
+   "id": "cf4e23b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +133,52 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e8496f3e",
+   "id": "eebaea6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mk_mean_std_dict(data, scaling_cols):\n",
+    "def mk_building_info(data, data_for_cal):\n",
+    "        \n",
+    "    new_data = data.copy()\n",
+    "    new_data['range'] = 0\n",
+    "    new_data['mean'] = 0\n",
+    "    new_data['std'] = 0\n",
+    "    new_data['holiday_gap'] = 0\n",
+    "    new_data['day_gap'] = 0\n",
+    "    \n",
+    "    B_NUM = 60\n",
+    "\n",
+    "    for num in range(B_NUM):\n",
+    "        building = data_for_cal.query(f'num == {num}')\n",
+    "        \n",
+    "        bt_range = building['target'].max()-building['target'].min()\n",
+    "        bt_mean = building['target'].mean()\n",
+    "        bt_std = building['target'].std()\n",
+    "        bt_holiday_gap = abs(building.query('is_holiday == 0')['target'].mean() - building.query('is_holiday == 1')['target'].mean())\n",
+    "        bt_day_gap = 0\n",
+    "        for d in range(building.shape[0]//24):\n",
+    "            tmp = building['target'][d*24:(d+1)*24]\n",
+    "            bt_day_gap += (tmp.max()-tmp.min())/(building.shape[0]//24)\n",
+    "            \n",
+    "        new_data.loc[new_data['num']==num, 'range'] = bt_range\n",
+    "        new_data.loc[new_data['num']==num, 'mean'] = bt_mean\n",
+    "        new_data.loc[new_data['num']==num, 'std'] = bt_std\n",
+    "        new_data.loc[new_data['num']==num, 'holiday_gap'] = bt_holiday_gap\n",
+    "        new_data.loc[new_data['num']==num, 'day_gap'] = bt_day_gap\n",
+    "        \n",
+    "    return new_data\n",
+    "\n",
+    "new_data = mk_building_info(new_data, new_data[new_data['date_time']<CONFIGS['valid_start_date_time']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8655ec61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mk_mean_std_dict(data, scaling_by_building_cols):\n",
     "    mean_std_dict = {}\n",
     "    for num in range(60):\n",
     "        building = data.query(f'num == {num}')\n",
@@ -145,62 +186,70 @@
     "            col: {\n",
     "                'mean': building[col].mean(),\n",
     "                'std': building[col].std()\n",
-    "            } for col in scaling_cols\n",
+    "            } for col in scaling_by_building_cols\n",
     "        }\n",
     "    return mean_std_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "02e56901",
+   "execution_count": 9,
+   "id": "01506353",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_cols = [\n",
-    "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp', 'target'\n",
+    "scaling_by_building_cols = [\n",
+    "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp', 'target',\n",
     "]\n",
+    "scaling_by_all_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
     "\n",
     "mean_std_dict = mk_mean_std_dict(\n",
     "    new_data[new_data['date_time'] < CONFIGS['valid_start_date_time']],\n",
-    "    scaling_cols\n",
+    "    scaling_by_building_cols\n",
     ")\n",
     "CONFIGS['mean_std_dict'] = mean_std_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3d063e2a",
+   "execution_count": 10,
+   "id": "7d134a06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def standard_scaling(data, scaling_cols, mean_std_dict=None):\n",
+    "def standard_scaling(data, scaling_by_building_cols, scaling_by_all_cols, mean_std_dict=None):\n",
     "    if not mean_std_dict:\n",
-    "        mean_std_dict = mk_mean_std_dict(data, scaling_cols)\n",
+    "        mean_std_dict = mk_mean_std_dict(data, scaling_by_building_cols)\n",
     "        \n",
     "    new_data = data.copy()\n",
     "    for num in range(60):\n",
-    "        for col in scaling_cols:\n",
+    "        for col in scaling_by_building_cols:\n",
     "            new_data.loc[new_data['num']==num, col] -= mean_std_dict[num][col]['mean']\n",
     "            new_data.loc[new_data['num']==num, col] /= mean_std_dict[num][col]['std']\n",
+    "    \n",
+    "    for col in scaling_by_all_cols:\n",
+    "        m = new_data.loc[:, col].mean()\n",
+    "        s = new_data.loc[:, col].std()\n",
+    "        new_data.loc[:, col] -= m\n",
+    "        new_data.loc[:, col] /= s\n",
+    "    \n",
     "    return new_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1d40bfbb",
+   "execution_count": 11,
+   "id": "e6674807",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = standard_scaling(new_data, scaling_cols, mean_std_dict)"
+    "new_data = standard_scaling(new_data, scaling_by_building_cols, scaling_by_all_cols, mean_std_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5884e6bb",
+   "execution_count": 12,
+   "id": "22b337cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,26 +258,28 @@
     "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
     "    'is_holiday', 'target',\n",
     "]\n",
-    "building_num_cols = ['num']\n",
     "target_time_info_cols = [\n",
     "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
     "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
     "    'is_holiday',\n",
     "]\n",
+    "building_num_cols = ['num']\n",
+    "building_info_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
     "target_cols = ['target']\n",
     "\n",
     "CONFIGS['time_series_cols'] = time_series_cols\n",
-    "CONFIGS['building_num_cols'] = building_num_cols\n",
     "CONFIGS['target_time_info_cols'] = target_time_info_cols\n",
+    "CONFIGS['building_num_cols'] = building_num_cols\n",
+    "CONFIGS['building_info_cols'] = building_info_cols\n",
     "CONFIGS['target_cols'] = target_cols\n",
     "\n",
-    "input_cols = list(set(time_series_cols+building_num_cols+target_time_info_cols+target_cols))"
+    "### holiday_gap이랑 day_gap 둘 다 scaling 이후에 계산하는걸로 뺄까"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6d87d1",
+   "id": "630043a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,15 +287,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53435db",
+   "id": "b38e20c6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "228d7e15",
+   "execution_count": null,
+   "id": "138f7408",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0645b0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d5d7519b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "fa6cd11e",
+   "execution_count": 43,
+   "id": "466af073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,42 +333,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "983f32e9",
+   "execution_count": 44,
+   "id": "27767df4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2040, 13), dtype=float64, numpy=\n",
-       "array([[-0.54498631, -1.73052664,  0.11081364, ...,  0.        ,\n",
-       "         0.        , -2.02148701],\n",
-       "       [-0.54498631, -1.72849431,  0.46409045, ...,  0.25881905,\n",
-       "         0.        , -1.99078964],\n",
-       "       [-0.54498631, -1.72646198,  0.72904805, ...,  0.5       ,\n",
-       "         0.        , -2.05218439],\n",
+       "array([[ 0.        , -2.02148701,  0.11081364, ...,  0.        ,\n",
+       "         0.        , -2.70834734],\n",
+       "       [ 0.        , -1.99078964,  0.46409045, ...,  0.        ,\n",
+       "         0.        , -3.05263783],\n",
+       "       [ 0.        , -2.05218439,  0.72904805, ...,  0.        ,\n",
+       "         0.        , -3.27873904],\n",
        "       ...,\n",
-       "       [-0.54498631,  2.40932393, -1.12565516, ..., -0.70710678,\n",
-       "         0.        ,  1.26313214],\n",
-       "       [-0.54498631,  2.41135626,  0.02249444, ..., -0.5       ,\n",
-       "         0.        ,  1.26313214],\n",
-       "       [-0.54498631,  2.41338859, -0.06582476, ..., -0.25881905,\n",
-       "         0.        ,  1.20173739]])>"
+       "       [ 0.        ,  1.26313214, -1.12565516, ...,  0.        ,\n",
+       "         0.        ,  1.66465573],\n",
+       "       [ 0.        ,  1.26313214,  0.02249444, ...,  0.        ,\n",
+       "         0.        ,  1.62868508],\n",
+       "       [ 0.        ,  1.20173739, -0.06582476, ...,  0.        ,\n",
+       "         0.        ,  1.46424783]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iter(ds).next()"
+    "iter(ds).next().numpy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d99997",
+   "id": "e469c870",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -309,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675c3091",
+   "id": "22bc4a77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366c6b39",
+   "id": "cf54ccc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -325,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f5d90e",
+   "id": "43b6669e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7356250",
+   "id": "e9ed8f76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -341,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c50421a8",
+   "id": "0107708e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45691946",
+   "id": "97f2965c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,15 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef7fe5cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a757a579",
+   "id": "b7f22e54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -373,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9e449b58",
+   "id": "eaf2786d",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8c3d1a",
+   "id": "2db4f613",
    "metadata": {},
    "outputs": [],
    "source": []
