--- a/codes/4_multi_task_learning.ipynb
+++ b/codes/4_multi_task_learning.ipynb
@@ -248,38 +248,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "22b337cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_series_cols = [\n",
+    "input_cols = [\n",
+    "    'num', 'range', 'mean', 'std', 'holiday_gap', 'day_gap',\n",
     "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
     "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
     "    'is_holiday', 'target',\n",
     "]\n",
-    "target_time_info_cols = [\n",
-    "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
-    "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
-    "    'is_holiday',\n",
-    "]\n",
-    "building_num_cols = ['num']\n",
-    "building_info_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
-    "target_cols = ['target']\n",
     "\n",
-    "CONFIGS['time_series_cols'] = time_series_cols\n",
-    "CONFIGS['target_time_info_cols'] = target_time_info_cols\n",
-    "CONFIGS['building_num_cols'] = building_num_cols\n",
-    "CONFIGS['building_info_cols'] = building_info_cols\n",
-    "CONFIGS['target_cols'] = target_cols\n",
+    "CONFIGS['input_cols'] = input_cols\n",
     "\n",
-    "### holiday_gap이랑 day_gap 둘 다 scaling 이후에 계산하는걸로 뺄까"
+    "\n",
+    "# time_series_cols = [\n",
+    "#     'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
+    "#     'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
+    "#     'is_holiday', 'target',\n",
+    "# ]\n",
+    "# target_time_info_cols = [\n",
+    "#     'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
+    "#     'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
+    "#     'is_holiday',\n",
+    "# ]\n",
+    "# building_num_cols = ['num']\n",
+    "# building_info_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
+    "# target_cols = ['target']\n",
+    "\n",
+    "# CONFIGS['time_series_cols'] = time_series_cols\n",
+    "# CONFIGS['target_time_info_cols'] = target_time_info_cols\n",
+    "# CONFIGS['building_num_cols'] = building_num_cols\n",
+    "# CONFIGS['building_info_cols'] = building_info_cols\n",
+    "# CONFIGS['target_cols'] = target_cols"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630043a2",
+   "id": "26b4f49c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38e20c6",
+   "id": "937b20eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138f7408",
+   "id": "48127700",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "d5d7519b",
    "metadata": {},
    "outputs": [],
@@ -320,48 +328,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "466af073",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data[input_cols]\n",
+    "data = data[CONFIGS['input_cols']]\n",
     "\n",
     "building_length = data.query('num == 0').shape[0]\n",
-    "ds = Dataset.from_tensor_slices(data).batch(building_length)"
+    "ds = Dataset.from_tensor_slices(data).map(\n",
+    "    lambda x:\n",
+    "        (\n",
+    "            tf.cast(x[0], tf.int16),  # num\n",
+    "            tf.cast(x[1:6], tf.float32),  # building_info_cols\n",
+    "            tf.cast(x[6:17], tf.float32),  # target_time_info_cols\n",
+    "            tf.cast(x[6:18], tf.float32),  # time_series_cols\n",
+    "            tf.cast(x[17], tf.float32)  # target\n",
+    "        )\n",
+    ")\n",
+    "ds = ds.window()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "27767df4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        , -2.02148701,  0.11081364, ...,  0.        ,\n",
-       "         0.        , -2.70834734],\n",
-       "       [ 0.        , -1.99078964,  0.46409045, ...,  0.        ,\n",
-       "         0.        , -3.05263783],\n",
-       "       [ 0.        , -2.05218439,  0.72904805, ...,  0.        ,\n",
-       "         0.        , -3.27873904],\n",
-       "       ...,\n",
-       "       [ 0.        ,  1.26313214, -1.12565516, ...,  0.        ,\n",
-       "         0.        ,  1.66465573],\n",
-       "       [ 0.        ,  1.26313214,  0.02249444, ...,  0.        ,\n",
-       "         0.        ,  1.62868508],\n",
-       "       [ 0.        ,  1.20173739, -0.06582476, ...,  0.        ,\n",
-       "         0.        ,  1.46424783]])"
+       "(<tf.Tensor: shape=(), dtype=int16, numpy=0>,\n",
+       " <tf.Tensor: shape=(5,), dtype=float64, numpy=array([-0.78192177,  3.4315275 , -0.7918083 , -0.65765888, -0.91022452])>,\n",
+       " <tf.Tensor: shape=(12,), dtype=float64, numpy=\n",
+       " array([-2.02148701,  0.11081364,  1.06631731,  0.15814313, -0.54498631,\n",
+       "        -1.73052664,  1.        ,  0.        ,  1.        ,  0.        ,\n",
+       "         0.        , -2.70834734])>,\n",
+       " <tf.Tensor: shape=(11,), dtype=float64, numpy=\n",
+       " array([-2.02148701,  0.11081364,  1.06631731,  0.15814313, -0.54498631,\n",
+       "        -1.73052664,  1.        ,  0.        ,  1.        ,  0.        ,\n",
+       "         0.        ])>,\n",
+       " <tf.Tensor: shape=(), dtype=float64, numpy=-2.7083473393199986>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iter(ds).next().numpy()"
+    "iter(ds).next()"
    ]
   },
   {
