--- a/codes/4_multi_task_learning.ipynb
+++ b/codes/4_multi_task_learning.ipynb
@@ -37,7 +37,7 @@
     "    'model_type': 'cnn1d',\n",
     "    \n",
     "    'valid_start_date_time': '2020-08-11 00',\n",
-    "    'test_start_index': '2020-08-18 00',\n",
+    "    'test_start_date_time': '2020-08-18 00',\n",
     "    \n",
     "    'batch_size': 64,\n",
     "    'learning_rate': 1e-4,\n",
@@ -248,227 +248,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "22b337cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_cols = [\n",
-    "    'num', 'range', 'mean', 'std', 'holiday_gap', 'day_gap',\n",
+    "building_num_cols = ['num']\n",
+    "building_info_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
+    "target_time_info_cols = [\n",
+    "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
+    "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
+    "    'is_holiday',\n",
+    "]\n",
+    "time_series_cols = [\n",
     "    'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
     "    'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
     "    'is_holiday', 'target',\n",
     "]\n",
+    "target_cols = ['target']\n",
+    "input_cols = list(set(\n",
+    "    building_num_cols+building_info_cols+\n",
+    "    target_time_info_cols+time_series_cols+target_cols\n",
+    "))\n",
     "\n",
-    "CONFIGS['input_cols'] = input_cols\n",
     "\n",
-    "\n",
-    "# time_series_cols = [\n",
-    "#     'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
-    "#     'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
-    "#     'is_holiday', 'target',\n",
-    "# ]\n",
-    "# target_time_info_cols = [\n",
-    "#     'temp', 'wind', 'humid', 'rain', 'sun', 'time_stamp',\n",
-    "#     'cos_hour', 'sin_hour', 'cos_weekday', 'sin_weekday',\n",
-    "#     'is_holiday',\n",
-    "# ]\n",
-    "# building_num_cols = ['num']\n",
-    "# building_info_cols = ['range', 'mean', 'std', 'holiday_gap', 'day_gap']\n",
-    "# target_cols = ['target']\n",
-    "\n",
-    "# CONFIGS['time_series_cols'] = time_series_cols\n",
-    "# CONFIGS['target_time_info_cols'] = target_time_info_cols\n",
-    "# CONFIGS['building_num_cols'] = building_num_cols\n",
-    "# CONFIGS['building_info_cols'] = building_info_cols\n",
-    "# CONFIGS['target_cols'] = target_cols"
+    "CONFIGS['building_num_cols'] = building_num_cols\n",
+    "CONFIGS['building_info_cols'] = building_info_cols\n",
+    "CONFIGS['target_time_info_cols'] = target_time_info_cols\n",
+    "CONFIGS['time_series_cols'] = time_series_cols\n",
+    "CONFIGS['target_cols'] = target_cols\n",
+    "CONFIGS['input_cols'] = input_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26b4f49c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "937b20eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48127700",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0645b0f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "d5d7519b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = new_data.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "466af073",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data[CONFIGS['input_cols']]\n",
+    "def mk_dataset(data, CONFIGS, shuffle=False):\n",
     "\n",
-    "building_length = data.query('num == 0').shape[0]\n",
-    "ds = Dataset.from_tensor_slices(data).map(\n",
-    "    lambda x:\n",
-    "        (\n",
-    "            tf.cast(x[0], tf.int16),  # num\n",
-    "            tf.cast(x[1:6], tf.float32),  # building_info_cols\n",
-    "            tf.cast(x[6:17], tf.float32),  # target_time_info_cols\n",
-    "            tf.cast(x[6:18], tf.float32),  # time_series_cols\n",
-    "            tf.cast(x[17], tf.float32)  # target\n",
+    "    data = data[CONFIGS['input_cols']]\n",
+    "    building_length = data.query('num == 0').shape[0]\n",
+    "\n",
+    "    building_num = data[CONFIGS['building_num_cols']]\n",
+    "    building_info = data[CONFIGS['building_info_cols']]\n",
+    "    target_time_info = data[CONFIGS['target_time_info_cols']]\n",
+    "    time_series = data[CONFIGS['time_series_cols']]\n",
+    "    target = data[CONFIGS['target_cols']]\n",
+    "\n",
+    "    # building_num\n",
+    "    building_num_ds = Dataset.from_tensor_slices(building_num).batch(building_length)\n",
+    "    building_num_ds = building_num_ds.flat_map(\n",
+    "        lambda x: Dataset.from_tensor_slices(\n",
+    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
     "        )\n",
-    ")\n",
-    "ds = ds.window()"
+    "    ).map(lambda x: tf.cast(x, tf.int16))\n",
+    "\n",
+    "    # building_info\n",
+    "    building_info_ds = Dataset.from_tensor_slices(building_info).batch(building_length)\n",
+    "    building_info_ds = building_info_ds.flat_map(\n",
+    "        lambda x: Dataset.from_tensor_slices(\n",
+    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
+    "        )\n",
+    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "\n",
+    "    # target_time_info\n",
+    "    target_time_info_ds = Dataset.from_tensor_slices(target_time_info).batch(building_length)\n",
+    "    target_time_info_ds = target_time_info_ds.flat_map(\n",
+    "        lambda x: Dataset.from_tensor_slices(\n",
+    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
+    "        )\n",
+    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "\n",
+    "    # time_series\n",
+    "    time_series_ds = Dataset.from_tensor_slices(time_series).batch(building_length)\n",
+    "    time_series_ds = time_series_ds.flat_map(\n",
+    "        lambda x:\n",
+    "            Dataset.from_tensor_slices(x).window(\n",
+    "                CONFIGS['window_size'], shift=1, drop_remainder=True\n",
+    "            ).flat_map(lambda x: x).batch(CONFIGS['window_size'])\n",
+    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "\n",
+    "    # target\n",
+    "    target_ds = Dataset.from_tensor_slices(target).batch(building_length)\n",
+    "    target_ds = target_ds.flat_map(\n",
+    "        lambda x:\n",
+    "            Dataset.from_tensor_slices(x).window(\n",
+    "                CONFIGS['target_length'], shift=1, drop_remainder=True\n",
+    "            ).flat_map(lambda x: x).batch(CONFIGS['target_length'])\n",
+    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "\n",
+    "    # zip\n",
+    "    ds = Dataset.zip((\n",
+    "        (\n",
+    "            building_num_ds,\n",
+    "            building_info_ds,\n",
+    "            target_time_info_ds,\n",
+    "            time_series_ds\n",
+    "        ),\n",
+    "        target_ds\n",
+    "    ))\n",
+    "    if shuffle:\n",
+    "        ds = ds.shuffle(512)\n",
+    "    ds = ds.batch(CONFIGS['batch_size']).cache().prefetch(2)\n",
+    "    \n",
+    "    return ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "27767df4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<tf.Tensor: shape=(), dtype=int16, numpy=0>,\n",
-       " <tf.Tensor: shape=(5,), dtype=float64, numpy=array([-0.78192177,  3.4315275 , -0.7918083 , -0.65765888, -0.91022452])>,\n",
-       " <tf.Tensor: shape=(12,), dtype=float64, numpy=\n",
-       " array([-2.02148701,  0.11081364,  1.06631731,  0.15814313, -0.54498631,\n",
-       "        -1.73052664,  1.        ,  0.        ,  1.        ,  0.        ,\n",
-       "         0.        , -2.70834734])>,\n",
-       " <tf.Tensor: shape=(11,), dtype=float64, numpy=\n",
-       " array([-2.02148701,  0.11081364,  1.06631731,  0.15814313, -0.54498631,\n",
-       "        -1.73052664,  1.        ,  0.        ,  1.        ,  0.        ,\n",
-       "         0.        ])>,\n",
-       " <tf.Tensor: shape=(), dtype=float64, numpy=-2.7083473393199986>)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iter(ds).next()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e469c870",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22bc4a77",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf54ccc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b6669e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9ed8f76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0107708e",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97f2965c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7f22e54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "eaf2786d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2020, 8, 4, 0, 0)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "CONFIGS['valid_start_date_time']-datetime.timedelta(hours=CONFIGS['window_size'])"
+    "str_to_dt = lambda x: datetime.datetime.strptime(x, '%Y-%m-%d %H')\n",
+    "hour_to_td = lambda x: datetime.timedelta(hours=x)\n",
+    "\n",
+    "train = new_data.loc[\n",
+    "    new_data['date_time'] < \\\n",
+    "        str_to_dt(CONFIGS['valid_start_date_time']),\n",
+    "    :\n",
+    "]\n",
+    "valid = new_data.loc[\n",
+    "    (new_data['date_time'] > \\\n",
+    "        str_to_dt(CONFIGS['valid_start_date_time'])-hour_to_td(CONFIGS['window_size']))&\\\n",
+    "    (new_data['date_time'] < \\\n",
+    "         str_to_dt(CONFIGS['test_start_date_time'])),\n",
+    "    :\n",
+    "]\n",
+    "test = new_data.loc[\n",
+    "    new_data['date_time'] > \\\n",
+    "        str_to_dt(CONFIGS['test_start_date_time'])-hour_to_td(CONFIGS['window_size']),\n",
+    "    :\n",
+    "]\n",
+    "\n",
+    "train_ds = mk_dataset(train, CONFIGS, shuffle=True)\n",
+    "valid_ds = mk_dataset(valid, CONFIGS)\n",
+    "test_ds = mk_dataset(test, CONFIGS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2db4f613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inversed_rmse 만들면 된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04206e59",
    "metadata": {},
    "outputs": [],
    "source": []
