--- a/codes/4_multi_task_learning.ipynb
+++ b/codes/4_multi_task_learning.ipynb
@@ -45,6 +45,7 @@
     "    'es_patience': 10,\n",
     "    \n",
     "    'window_size': 7*24,\n",
+    "    'shift': 1,\n",
     "    'target_length': 3,\n",
     "}"
    ]
@@ -283,10 +284,23 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "466af073",
+   "id": "dda65897",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def crop(data, CONFIGS):\n",
+    "    croped = data[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
+    "    return Dataset.from_tensor_slices(croped)\n",
+    "\n",
+    "\n",
+    "def mk_window(data, size, shift):\n",
+    "    ds = Dataset.from_tensor_slices(data)\n",
+    "    ds = ds.window(\n",
+    "        size, shift=shift, drop_remainder=True\n",
+    "    ).flat_map(lambda x: x).batch(size)\n",
+    "    return ds\n",
+    "\n",
+    "\n",
     "def mk_dataset(data, CONFIGS, shuffle=False):\n",
     "\n",
     "    data = data[CONFIGS['input_cols']]\n",
@@ -300,46 +314,31 @@
     "\n",
     "    # building_num\n",
     "    building_num_ds = Dataset.from_tensor_slices(building_num).batch(building_length)\n",
-    "    building_num_ds = building_num_ds.flat_map(\n",
-    "        lambda x: Dataset.from_tensor_slices(\n",
-    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
-    "        )\n",
-    "    ).map(lambda x: tf.cast(x, tf.int16))\n",
+    "    building_num_ds = building_num_ds.flat_map(lambda x: crop(x, CONFIGS))\n",
+    "    building_num_ds = building_num_ds.map(lambda x: tf.cast(x, tf.int16))\n",
     "\n",
     "    # building_info\n",
     "    building_info_ds = Dataset.from_tensor_slices(building_info).batch(building_length)\n",
-    "    building_info_ds = building_info_ds.flat_map(\n",
-    "        lambda x: Dataset.from_tensor_slices(\n",
-    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
-    "        )\n",
-    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "    building_info_ds = building_info_ds.flat_map(lambda x: crop(x, CONFIGS))\n",
+    "    building_info_ds = building_info_ds.map(lambda x: tf.cast(x, tf.float32))\n",
     "\n",
     "    # target_time_info\n",
     "    target_time_info_ds = Dataset.from_tensor_slices(target_time_info).batch(building_length)\n",
-    "    target_time_info_ds = target_time_info_ds.flat_map(\n",
-    "        lambda x: Dataset.from_tensor_slices(\n",
-    "            x[CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
-    "        )\n",
-    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "    target_time_info_ds = target_time_info_ds.flat_map(lambda x: crop(x, CONFIGS))\n",
+    "    target_time_info_ds = target_time_info_ds.map(lambda x: tf.cast(x, tf.float32))\n",
     "\n",
     "    # time_series\n",
     "    time_series_ds = Dataset.from_tensor_slices(time_series).batch(building_length)\n",
     "    time_series_ds = time_series_ds.flat_map(\n",
-    "        lambda x:\n",
-    "            Dataset.from_tensor_slices(x).window(\n",
-    "                CONFIGS['window_size'], shift=1, drop_remainder=True\n",
-    "            ).flat_map(lambda x: x).batch(CONFIGS['window_size'])\n",
-    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
+    "        lambda x: mk_window(x, CONFIGS['window_size'], CONFIGS['shift']))\n",
+    "    time_series_ds = time_series_ds.map(lambda x: tf.cast(x, tf.float32))\n",
     "\n",
     "    # target\n",
     "    target_ds = Dataset.from_tensor_slices(target).batch(building_length)\n",
     "    target_ds = target_ds.flat_map(\n",
-    "        lambda x:\n",
-    "            Dataset.from_tensor_slices(x).window(\n",
-    "                CONFIGS['target_length'], shift=1, drop_remainder=True\n",
-    "            ).flat_map(lambda x: x).batch(CONFIGS['target_length'])\n",
-    "    ).map(lambda x: tf.cast(x, tf.float32))\n",
-    "\n",
+    "        lambda x: mk_window(x, CONFIGS['target_length'], CONFIGS['shift']))\n",
+    "    target_ds = target_ds.map(lambda x: tf.cast(x, tf.float32))\n",
+    "    \n",
     "    # zip\n",
     "    ds = Dataset.zip((\n",
     "        (\n",
@@ -392,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2db4f613",
    "metadata": {},
    "outputs": [],
