--- a/codes/3_multi_input.ipynb
+++ b/codes/3_multi_input.ipynb
@@ -224,8 +224,11 @@
    "source": [
     "def mk_dataset(data, CONFIGS, shuffle=False):\n",
     "    \n",
+    "    h = CONFIGS['target_length']//2\n",
+    "    \n",
     "    time_series = data[CONFIGS['time_series_cols']][:-CONFIGS['target_length']]\n",
-    "    target_time_info = data[CONFIGS['target_time_info_cols']][CONFIGS['window_size']+1:-(CONFIGS['target_length']-2)]\n",
+    "    target_time_info = data[CONFIGS['target_time_info_cols']]\\\n",
+    "        [CONFIGS['window_size']+h:data.shape[0]-CONFIGS['target_length']+1+h]\n",
     "    target = data[CONFIGS['target_cols']][CONFIGS['window_size']:]\n",
     "    \n",
     "    time_series_ds = Dataset.from_tensor_slices(time_series)\n",
