Edit reshape logic

--- a/codes/4_multi_task_learning.ipynb
+++ b/codes/4_multi_task_learning.ipynb
@@ -472,7 +472,7 @@
     "        self.CONFIGS = CONFIGS\n",
     "\n",
     "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
-    "        y_true = tf.squeeze(y_true)\n",
+    "        y_true = tf.reshape(y_true, (-1, CONFIGS['target_length']))\n",
     "        mean = tf.reshape(y_pred[:, -2], (-1, 1))\n",
     "        std = tf.reshape(y_pred[:, -1], (-1, 1))\n",
     "        y_pred = y_pred[:, :-2]\n",
@@ -778,17 +778,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "1439/1439 [==============================] - 15s 9ms/step - loss: 0.0028 - inversed_rmse: 896.6553 - val_loss: 0.0065 - val_inversed_rmse: 1365.2784\n",
+      "1439/1439 [==============================] - 15s 9ms/step - loss: 0.0028 - inversed_rmse: 892.2892 - val_loss: 0.0063 - val_inversed_rmse: 1336.9434\n",
       "Epoch 2/100\n",
-      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0025 - inversed_rmse: 841.9459 - val_loss: 0.0067 - val_inversed_rmse: 1379.5895\n",
+      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0025 - inversed_rmse: 846.8881 - val_loss: 0.0064 - val_inversed_rmse: 1351.0399\n",
       "Epoch 3/100\n",
-      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0022 - inversed_rmse: 799.6115 - val_loss: 0.0069 - val_inversed_rmse: 1401.3184\n",
+      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0023 - inversed_rmse: 806.9469 - val_loss: 0.0067 - val_inversed_rmse: 1379.5970\n",
       "Epoch 4/100\n",
-      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0020 - inversed_rmse: 758.8723 - val_loss: 0.0072 - val_inversed_rmse: 1430.3618\n",
+      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0021 - inversed_rmse: 772.4522 - val_loss: 0.0070 - val_inversed_rmse: 1418.9790\n",
       "Epoch 5/100\n",
-      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0018 - inversed_rmse: 723.0325 - val_loss: 0.0075 - val_inversed_rmse: 1465.5809\n",
+      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0019 - inversed_rmse: 739.5641 - val_loss: 0.0074 - val_inversed_rmse: 1450.9219\n",
       "Epoch 6/100\n",
-      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0017 - inversed_rmse: 696.1371 - val_loss: 0.0078 - val_inversed_rmse: 1496.6775\n"
+      "1439/1439 [==============================] - 5s 3ms/step - loss: 0.0018 - inversed_rmse: 709.9597 - val_loss: 0.0076 - val_inversed_rmse: 1473.9391\n"
      ]
     }
    ],
@@ -817,9 +817,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 0.002562\ttrain_rmse: 855.955078\n",
-      "valid_loss: 0.006518\tvalid_rmse: 1365.278442\n",
-      "test_loss: 0.007602\ttest_rmse: 1474.494751\n"
+      "train_loss: 0.002584\ttrain_rmse: 859.567200\n",
+      "valid_loss: 0.006250\tvalid_rmse: 1336.943359\n",
+      "test_loss: 0.007546\ttest_rmse: 1469.002808\n"
      ]
     }
    ],
