Change model_name using_dataset -> tf_dataset

--- a/codes/2_tf_dataset.ipynb
+++ b/codes/2_tf_dataset.ipynb
@@ -31,7 +31,7 @@
     "CONFIGS = {\n",
     "    'data_path': '../data/',\n",
     "    'model_path': '../model/',\n",
-    "    'model_name': 'using_dataset',\n",
+    "    'model_name': 'tf_dataset',\n",
     "\n",
     "    'valid_start_index': 1704,\n",
     "    'test_start_index': 1872,\n",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"using_dataset\"\n",
+      "Model: \"tf_dataset\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
